--- a/chuok-frontend/src/app/pages/not-found/not-found.component.html
+++ b/chuok-frontend/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<!--
+  Not Found page:
+  - Displays a full-window image for 404 or missing routes.
+  - Includes a button to navigate back to the main page.
+  - Uses responsive styles to adapt the image and layout for all screen sizes.
+-->
+<div>
+    <img src="assets/images/pages/not-found.png" alt="not-found-image">
+    <button><a routerLink="/main">Go back</a></button>
+</div>
