--- a/chuok-frontend/src/app/components/header/header.component.html
+++ b/chuok-frontend/src/app/components/header/header.component.html
@@ -5,7 +5,13 @@
   Each navigation link closes the nav menu on click. Log Out triggers logout logic.
 -->
 <header class="header">
-    <a routerLink="/main"><img class="main-logo-picture" src="assets/images/chuOK-logo.png" alt="Home Logo"></a>
+    <a routerLink="/main">
+        <img
+            class="main-logo-picture"
+            [src]="authService.getUserRole() === 'ADMIN' ? 'assets/images/chuOK-logo-admin.png' : 'assets/images/chuOK-logo.png'"
+            alt="User Role Logo"
+        />
+    </a>
 </header>
 <nav #navBar class="nav-bar" [class.open]="navOpen" (click)="toggleNav()">
     <ng-container *ngIf="navOpen">
@@ -23,6 +29,9 @@
         </a>
         <a title="Log Out" class="bounce-hover" (click)="logout()">
             <img class="logo-picture" src="assets/images/logout.png" alt="Log Out Logo">
+        </a>
+        <a *ngIf="authService.getUserRole() === 'ADMIN'" routerLink="/admin" class="bounce-hover" (click)="closeNav()">
+            <img class="logo-picture" src="assets/images/pages/admin-panel.png" alt="Admin Panel">
         </a>
     </ng-container>
 </nav>
